# icm426xx

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/esp32/: Cargo.toml
examples/esp32/src/: main.rs
src/: fifo.rs  lib.rs  ll.rs  ready.rs  register_bank.rs  uninitialized.rs
