[package]
name = "icm426xx"
version = "0.3.2"
edition = "2021"
authors = ["Fan Jiang"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Rust driver for the ICM426xx family of IMUs"
repository = "https://github.com/ProfFan/icm426xx"

[dependencies]
embedded-hal = "1.0.*"
defmt = "0.3.*"
paste = "1.0.*"
bilge = { version = "0.2.*", default-features = false }
bytemuck = { version = ">=1.16.0,<2.0.0", features = ["derive"] }
embedded-hal-async = { version = "1.0", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.*", features = ["embedded-hal-async"] }
embedded-hal-bus = { version = "0.2.*", features = ["async"] }
async-std = { version = "1.12.*", features = ["attributes"] }

[features]
default = []
async = ["dep:embedded-hal-async"]
blocking = []
