[package]
name = "basic-read-esp32"
edition = "2021"
publish = false

[dependencies]
bytemuck = { version = "1.23.0" }
defmt = "0.3.10"
embedded-hal = { version = "1.0.0" }
embedded-hal-bus = {version = "0.3.0", features = ["defmt-03"]}
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-16384"] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
esp-backtrace = { version = "0.15", features = ["esp32s3", "defmt"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "defmt", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
esp-println = { version = "0.13.1", features = ["esp32s3", "defmt-espflash"] }
static_cell = "2.1.0"

icm426xx = { path = "../../", features = ["async"]}

[profile.release]
debug = 2

[build-dependencies]
embuild = "0.33"
